TRAC-5630 Workspace Button alignment issue fix.

--- a/src/app/components/views/composer/composer.component.scss
+++ b/src/app/components/views/composer/composer.component.scss
@@ -114,7 +114,7 @@
   display: flex;
   flex-direction: row;
   position: absolute;
-  bottom: 1px;
+  bottom: 10px;
   right: 40px;
 }
 
